2006-05-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j30-UNSTABLE

 * CHANGE: 
	Move index of highlight into albumdata.
	So we dont need to go through the complete album.

	Album-Version bump.

2006-05-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j29-UNSTABLE

 * Layout:
    o setup/defaults.inc
    o setup/constants.inc

 * CSS -> 1.6
    o setup/check_imagemagick.php
    o setup/check_netpbm.php
    o setup/backup_albums.php

 * Moved checks for mod_rewrite completely into lib/setup.php

 * Improved check for .htaccess (check for existance)

 * Moved checkNetPbm() into lib/setup.php

 * Added template for check ImageMagick and NetPBM

 * Consolidation for check ImageMagick and NetPBM.

2006-05-14/17 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j27/j28-UNSTABLE

 * Added <DOLLAR>Id: at various Places.

2006-04-28 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j26-UNSTABLE

 * New: function getSVNRevision()

 * Tweaked tools/build_manifest.php to work with svn

 * Use of gTranslate at various places.

 * Layout of setup/check_versions.php

 * Use of class="g-button" at various places.

 * General Layout.

2006-04-26 Jens Tkotz <jens@peino.de> 1.5.4-cvs-b4 / 1.6-svn-b1-j25-UNSTABLE

 * Fix: Often bots access the ecardform without having correct photo loaded etc.
        This leaves unnecessary Errormessage in Apaches logfile

   Thanks to Peter Schumacher from forums.

 * Fix: Only do userinput sanitation if value contains html tags.

 * FIX: Compressing an Image with having maximum filesize failed.
   Thanks to Scott Barnes (atomsmith) from forums.

 * FIX: Just compressing(no resize) an Image with NetPBM failed.

2006-04-24 Jens Tkotz <jens@peino.de> 1.6-cvs-b1-j24-UNSTABLE

 * Fixed css of upgrade_users.php

2006-04-24 Jens Tkotz <jens@peino.de> 1.6-cvs-b1-j23-UNSTABLE

 * Tweaked css/layout in watermark_album.php

2006-04-24 Jens Tkotz <jens@peino.de> 1.6-cvs-b1-j22-UNSTABLE

 * Use of gSubmit() and gButton at some places

 * Added title to gSubmit and gButton
