@@ -1,3 +1,7 @@
+2006-05-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j31-UNSTABLE
+
+ * Fix: mod_rewrite changes in b29 were not complete.
+
 2006-05-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j30-UNSTABLE
 
  * CHANGE: 
